@@ -53,7 +53,7 @@ class ProgressPage(Page):
         self.main.progressbar.set_position(int(100*tasklist.get_percent_completed()))
         self.main.task_label.set_text(task.description)
         self.main.subprogressbar.set_position(int(100*task.get_percent_completed()))
-        self.main.subtask_label.set_text(message.strip())
+        self.main.subtask_label.set_text("%s (%s)" % (message.strip(), task.get_progress_info()))
         if tasklist.status is not tasklist.ACTIVE:
             self.main.progressbar.set_position(100)
             self.frontend.stop()
